# LiteyukiBot-TriM

./: .gitignore  README.md  clean_pycache.py  main.py  pyproject.toml  requirements.txt
liteyuki/: config.py  log.py  utils.py
liteyuki/bot/: __init__.py  lifespan.py
liteyuki/comm/: __init__.py  channel.py  storage.py
liteyuki/core/: manager.py  spawn_process.py
liteyuki/dev/: observer.py
liteyuki/message/: on.py
liteyuki/plugin/: __init__.py  load.py  manager.py  model.py
liteyuki/plugins/: __init__.py  lifespan_monitor.py  liteecho.py  register_service.py
liteyuki/plugins/plugin_loader/: __init__.py  data_source.py
src/liteyuki_main/: __init__.py  api.py  core.py  dev.py  loader.py
src/liteyuki_plugins/: register_service.py
src/liteyuki_plugins/liteyukibot_plugin_nonebot/: dev_reloader.py
src/nonebot_plugins/liteyuki_pacman/: common.py  npm.py  rpm.py
src/nonebot_plugins/liteyuki_plugin_dockdragon/: utils.py
src/nonebot_plugins/liteyuki_satori_user_info/: auto_update.py
src/nonebot_plugins/liteyuki_statistics/: __init__.py  data_source.py  stat_matchers.py  stat_monitors.py
src/nonebot_plugins/liteyuki_status/: __init__.py  api.py  md_status_utils.py  status.py
src/nonebot_plugins/liteyuki_uniblacklist/: __init__.py  api.py
src/nonebot_plugins/liteyuki_user/: profile_manager.py
src/nonebot_plugins/pasyaut_plugin_upskin/: __init__.py  submit.py
src/nonebot_plugins/trimo_plugin_handle/: LICENSE.md  __init__.py  config.py  data_source.py  utils.py
src/utils/: __init__.py
unused_plugin/liteyuki_weather/: qw_api.py  qweather.py
(+102 files in other folders)
