# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
# This file is liteyuki framework use only, don`t use it with applications or nb-cli.
# 此文件仅供 liteyuki 框架使用，请勿用于应用程序及nb-cli，请使用pip进行安装。
[project]
name = "ryoun-trim"
dynamic = ["version"]
description = "A lightweight bot process management framework and application."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Eilles", email = "EillesWan@outlook.com" },
    { name = "TriM-Org.", email = "TriM-Organization@hotmail.com" },
    { name = "snowykami", email = "snowykami@outlook.com" },
    { name = "LiteyukiStudio", email = "studio@liteyuki.icu" },
]
license = { text = "汉钰律许可协议 第一版" }

dependencies = [
    "loguru~=0.7.2",
    "pydantic==2.8.2",
    "PyYAML==6.0.2",
    "toml==0.10.2",
    "watchdog==4.0.1",
    "pdm-backend==2.3.3"
]

[project.urls]
Homepage = "https://bot.liteyuki.icu"
Repository = "https://gitee.com/TriM-Organization/LiteyukiBot-TriM"
"Issue Tracker" = "https://github.com/LiteyukiStudio/LiteyukiBot/issues/new?assignees=&labels=&projects=&template=%E9%97%AE%E9%A2%98%E5%8F%8D%E9%A6%88.md&title="


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["liteyuki/", "LICENSE", "README.md", "LICENSE.MD"]
excludes = ["tests/", "docs/", "src/"]

[tool.pdm.version]
source = "file"
path = "liteyuki/__init__.py"